<resources>
    <string name="app_name">Movie Trends</string>

    <string name="no_internet">There is not internet connection</string>
    <string name="no_internet_detail">Please check your network connection and try again.</string>
    <string name="retry">Retry</string>
    <string name="no_movies">Here you will find the new movie releases!</string>
    <string name="banner_transition_name">banner</string>
    <string name="summary_title">Overview:</string>
    <string name="videos_title">Trailer:</string>
    <string name="cast_title">Cast:</string>
    <string name="genre_title">Genre:</string>
    <string name="status_title">Status:</string>
    <string name="budge_title">Budge:</string>
    <string name="runtime_title">Runtime:</string>
    <string name="language_title">Original Language:</string>
    <string name="settings">Settings</string>
    <string name="setting_language">Select a language:</string>
    <string name="en">English</string>
    <string name="es">Spanish</string>

    <string name="ok">OK</string>
    <string name="error">Error</string>
    <string name="error_keys">Add TheMovieDb and Youtube ApiKeys in build.gradle</string>

</resources>
