<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/no_content"
                android:background="@color/colorEmptyBackground"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_centerVertical="true"
            android:paddingBottom="?attr/actionBarSize">

        <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:scaleType="fitXY"
                android:layout_gravity="center_horizontal"
                android:tint="#bababa"
                android:src="@drawable/ic_no_connection"
                android:contentDescription="@string/no_internet"/>

        <TextView
                android:id="@+id/no_internet_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_marginLeft="@dimen/margin_x30"
                android:layout_marginRight="@dimen/margin_x30"
                android:gravity="center"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:text="@string/no_internet"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
                android:textColor="@color/colorTextPrimaryBlack"/>

        <TextView
                android:id="@+id/no_internet_detail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="@dimen/margin_x60"
                android:layout_marginRight="@dimen/margin_x60"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:text="@string/no_internet_detail"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
                android:textColor="@color/colorTextSecondaryBlack"/>


        <TextView
                android:id="@+id/no_internet_retry_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/margin_x20"
                android:gravity="center"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:text="@string/retry"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Button"
                android:textColor="@color/colorAccent"
                android:onClick="onUpdateContent"/>
    </LinearLayout>
</RelativeLayout>